Fixed some of the styles, and attempted to tweak translateZ to get the text not blurry -- no go. Reformated pages some.

--- a/fairytale.css
+++ b/fairytale.css
@@ -36,7 +36,8 @@ section.book {
     height: 22em;
     padding: 3em 4em;
     border: 1px solid hsla(0,0%,0%, 0.2);
-    background: hsl(120, 50%, 70%) url("images/leather_tile_250.jpg");
+    box-shadow: 0.5em 1em 1em rgba(0,0,0, 0.2);
+    background: hsl(70, 25%, 40%) url("images/leather_tile_250.jpg");
     background-image: 
       -webkit-gradient(linear, left top, right top,
         from(hsla(0,0%,0%, 0.2)), 
@@ -45,18 +46,28 @@ section.book {
         color-stop(0.045, hsla(0,0%,0%, 0.0)),
         color-stop(0.995, hsla(0,0%,0%, 0.0)),
         to(hsla(0,0%,0%, 0.3)) ),
-      url("images/leather_tile_250.jpg");
-    }
+      url("images/leather_tile_250.jpg"); }
     section.book section.cover h1 {
       margin: 0;
       text-align: center;
       text-shadow: 1px 1px 0 hsla(0, 0%, 100%, 0.3);
       font-size: 4em; }
+    section.book section.cover.back {
+      background-image: 
+        -webkit-gradient(linear, right top, left top,
+          from(hsla(0,0%,0%, 0.2)), 
+          color-stop(0.02, hsla(0,0%,0%, 0.1)),
+          color-stop(0.04, hsla(0,0%,0%, 0.25)),
+          color-stop(0.045, hsla(0,0%,0%, 0.0)),
+          color-stop(0.995, hsla(0,0%,0%, 0.0)),
+          to(hsla(0,0%,0%, 0.3)) ),
+        url("images/leather_tile_250.jpg"); }
     
   section.book section.page {
-    width: 14em;
-    height: 21em; 
-    top: 0.5em;
+    font-size: 16px;
+    width: 22em;
+    height: 31em; 
+    top: 0.75em;
     border: 1px solid #ccc;
     border-color: #ccc #ccc hsl(20, 10%, 50%) hsl(20, 10%, 50%);
     background: #ece1cc;
@@ -68,8 +79,7 @@ section.book {
       -webkit-gradient(linear, right top, 90% top,
         from(hsla(20, 10%, 50%, 0.2)), to(hsla(0, 10%, 50%, 0.0)) );
     padding: 3em 4em;
-    margin: 0;
-    box-shadow: 0.5em 1em 1em rgba(0,0,0, 0.2); }
+    margin: 0; }
     section.book section.page h1 {
       font-size: 2em; }
     section.book section.page p {
@@ -80,6 +90,16 @@ section.book {
       top: 2em;
       width: 100%;
       text-align: right; }
+
+  section.book section.page.back {
+    background-image: 
+      -webkit-gradient(linear, right top, 90% top,
+        from(hsla(20, 10%, 50%, 0.6)), to(hsla(0, 10%, 50%, 0.0)) ),
+      -webkit-gradient(linear, left top, left 20,
+        from(hsla(20, 10%, 50%, 0.2)), to(hsla(0, 10%, 50%, 0.0)) ),
+      -webkit-gradient(linear, left top, 10% top,
+        from(hsla(20, 10%, 50%, 0.2)), to(hsla(0, 10%, 50%, 0.0)) );
+  }
 
   section.book section.page.title {
     text-align: center; }
@@ -94,7 +114,6 @@ section.book {
     -webkit-gradient(linear, right top, 90% top,
       from(hsla(0, 10%, 50%, 0.2)), to(hsla(0, 10%, 50%, 0.0)) ),
     url("images/prologue.jpg");
-  ;
 }
 
 .filler {
@@ -125,15 +144,15 @@ section.book {
     -webkit-transition: -webkit-transform 0.8s ease-in-out;
     -webkit-trans }
     section.book section.sheet > .front {
-      -webkit-transform: translateZ(1px);
+      -webkit-transform: translateZ(0);
       -webkit-transition: -webkit-transform 0.8s ease-in-out; }
     section.book section.sheet > .back {
-      -webkit-transform: rotate3d(0,1,0, -180deg); }
+      -webkit-transform: translateZ(-1px) rotate3d(0,1,0, -180deg); }
 
   section.book section.sheet.flipped {
     -webkit-transform: translate(-22.5em) rotate3d(0,1,0, -180deg); }
     section.book section.sheet.flipped > .front {
-      -webkit-transform: translateZ(-1px); }
+      -webkit-transform: translateZ(-2px); }
 
   section.book section.sheet:first-child { -webkit-transition-duration: 1.5s; }
   section.book section.sheet:first-child > .front { -webkit-transition-duration: 1.5s; }
